--- a/vMusic/src/Components/Navbar/Navbar.module.css
+++ b/vMusic/src/Components/Navbar/Navbar.module.css
@@ -12,7 +12,7 @@
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
   color: white;
   flex-wrap: wrap;
   overflow-x: hidden;
